--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "react-dom": "18.2.0",
     "react-icons": "4.4.0",
     "react-redux": "8.0.2",
-    "react-scripts": "4.0.0",
+    "react-scripts": "5.0.1",
     "redux": "4.2.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
-    "typescript": "4.1.3"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
